// Package hash æä¾›äº¤æ˜“å“ˆå¸Œè®¡ç®—æœåŠ¡
//
// ğŸ¯ æ ¸å¿ƒèŒè´£ï¼š
// 1. æä¾›ç¡®å®šæ€§çš„äº¤æ˜“å“ˆå¸Œè®¡ç®—æœåŠ¡
// 2. å®ç°gRPC TransactionHashServiceæ¥å£
// 3. æ”¯æŒè°ƒè¯•ä¿¡æ¯å’Œæ€§èƒ½ç›‘æ§
// 4. ç¡®ä¿è·¨å¹³å°å“ˆå¸Œè®¡ç®—ä¸€è‡´æ€§
package hash

import (
	"context"
	"crypto/subtle"
	"fmt"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"google.golang.org/protobuf/proto"
)

// TransactionHashService å®ç°äº¤æ˜“å“ˆå¸ŒæœåŠ¡
type TransactionHashService struct {
	transaction.UnimplementedTransactionHashServiceServer
	hashManager crypto.HashManager
	logger      log.Logger
}

// NewTransactionHashService åˆ›å»ºäº¤æ˜“å“ˆå¸ŒæœåŠ¡å®ä¾‹
func NewTransactionHashService(hashManager crypto.HashManager, logger log.Logger) *TransactionHashService {
	return &TransactionHashService{
		hashManager: hashManager,
		logger:      logger,
	}
}

// ComputeHash è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆç¡®å®šæ€§ï¼‰
// æ’é™¤ç­¾åå­—æ®µï¼Œç”¨äºäº¤æ˜“IDè®¡ç®—
func (s *TransactionHashService) ComputeHash(ctx context.Context, req *transaction.ComputeHashRequest) (*transaction.ComputeHashResponse, error) {
	if req.Transaction == nil {
		return &transaction.ComputeHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}

	// åˆ›å»ºäº¤æ˜“å‰¯æœ¬ï¼Œæ’é™¤ç­¾åå­—æ®µ
	txCopy := proto.Clone(req.Transaction).(*transaction.Transaction)
	// æ¸…ç©ºæ‰€æœ‰è¾“å…¥çš„è§£é”è¯æ˜ï¼ˆåŒ…å«ç­¾åï¼‰
	for _, input := range txCopy.Inputs {
		input.UnlockingProof = nil
	}

	// åºåˆ—åŒ–äº¤æ˜“ï¼ˆå·²æ’é™¤ç­¾åï¼‰è¿›è¡Œå“ˆå¸Œè®¡ç®—
	mo := proto.MarshalOptions{Deterministic: true}
	txBytes, err := mo.Marshal(txCopy)
	if err != nil {
		return &transaction.ComputeHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// ä½¿ç”¨HashManageræ¥å£çš„SHA-256ç®—æ³•ï¼ˆç¡®å®šæ€§ï¼‰
	hash := s.hashManager.SHA256(txBytes)

	response := &transaction.ComputeHashResponse{
		Hash:    hash,
		IsValid: true,
	}

	return response, nil
}

// ValidateHash éªŒè¯äº¤æ˜“å“ˆå¸Œï¼ˆç¡®å®šæ€§ï¼‰
func (s *TransactionHashService) ValidateHash(ctx context.Context, req *transaction.ValidateHashRequest) (*transaction.ValidateHashResponse, error) {
	if req == nil {
		return &transaction.ValidateHashResponse{
			IsValid: false,
		}, fmt.Errorf("éªŒè¯è¯·æ±‚ä¸èƒ½ä¸ºç©º")
	}

	// è®¡ç®—å®é™…å“ˆå¸Œ
	computeReq := &transaction.ComputeHashRequest{
		Transaction:      req.Transaction,
		IncludeDebugInfo: false, // éªŒè¯æ—¶ä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
	}

	computeResp, err := s.ComputeHash(ctx, computeReq)
	if err != nil {
		return &transaction.ValidateHashResponse{
			IsValid: false,
		}, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ¯”è¾ƒå“ˆå¸Œå€¼
	isValid := len(computeResp.Hash) == len(req.ExpectedHash) &&
		subtle.ConstantTimeCompare(computeResp.Hash, req.ExpectedHash) == 1

	response := &transaction.ValidateHashResponse{
		IsValid:      isValid,
		ComputedHash: computeResp.Hash,
		ExpectedHash: req.ExpectedHash,
	}

	if !isValid {
		errorMsg := "äº¤æ˜“å“ˆå¸ŒéªŒè¯å¤±è´¥ï¼šè®¡ç®—çš„å“ˆå¸Œä¸æœŸæœ›å€¼ä¸åŒ¹é…"
		response.ErrorMessage = &errorMsg
	}

	return response, nil
}

// ComputeSignatureHash è®¡ç®—ç­¾åå“ˆå¸Œï¼ˆç”¨äºç­¾åå’ŒéªŒè¯ï¼‰
// æ”¯æŒ SIGHASH ç±»å‹å¤„ç†
func (s *TransactionHashService) ComputeSignatureHash(ctx context.Context, req *transaction.ComputeSignatureHashRequest) (*transaction.ComputeSignatureHashResponse, error) {
	if req.Transaction == nil {
		return &transaction.ComputeSignatureHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}

	if int(req.InputIndex) >= len(req.Transaction.Inputs) {
		return &transaction.ComputeSignatureHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("è¾“å…¥ç´¢å¼•è¶…å‡ºèŒƒå›´: %d", req.InputIndex)
	}

	// åˆ›å»ºäº¤æ˜“å‰¯æœ¬ï¼Œæ’é™¤ç­¾åå­—æ®µ
	txCopy := proto.Clone(req.Transaction).(*transaction.Transaction)
	// æ¸…ç©ºæ‰€æœ‰è¾“å…¥çš„è§£é”è¯æ˜ï¼ˆåŒ…å«ç­¾åï¼‰
	for _, input := range txCopy.Inputs {
		input.UnlockingProof = nil
	}

	// æ ¹æ® SIGHASH ç±»å‹å¤„ç†äº¤æ˜“ç»“æ„
	// ç®€åŒ–å®ç°ï¼šå½“å‰åªæ”¯æŒ SIGHASH_ALLï¼ˆåŒ…å«æ‰€æœ‰è¾“å…¥å’Œè¾“å‡ºï¼‰
	// TODO: å®ç°å®Œæ•´çš„ SIGHASH ç±»å‹æ”¯æŒï¼ˆSIGHASH_NONE, SIGHASH_SINGLE, ANYONECANPAYç­‰ï¼‰
	if req.SighashType != transaction.SignatureHashType_SIGHASH_ALL {
		if s.logger != nil {
			s.logger.Warnf("âš ï¸ ä¸æ”¯æŒçš„ SIGHASH ç±»å‹: %vï¼Œä½¿ç”¨ SIGHASH_ALL", req.SighashType)
		}
	}

	// åºåˆ—åŒ–äº¤æ˜“è¿›è¡Œå“ˆå¸Œè®¡ç®—
	mo := proto.MarshalOptions{Deterministic: true}
	txBytes, err := mo.Marshal(txCopy)
	if err != nil {
		return &transaction.ComputeSignatureHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// æ·»åŠ è¾“å…¥ç´¢å¼•å’Œ SIGHASH ç±»å‹åˆ°å“ˆå¸Œè®¡ç®—
	// è¿™ç¡®ä¿äº†ä¸åŒè¾“å…¥å’Œä¸åŒ SIGHASH ç±»å‹ä¼šäº§ç”Ÿä¸åŒçš„å“ˆå¸Œ
	hasher := s.hashManager.NewSHA256Hasher()
	hasher.Write(txBytes)
	hasher.Write([]byte{byte(req.InputIndex), byte(req.SighashType)})
	hash := hasher.Sum(nil)

	// ğŸ” è°ƒè¯•ï¼šè®°å½•ç­¾åå“ˆå¸Œè®¡ç®—çš„å…³é”®æ•°æ®ï¼ˆä½¿ç”¨ logger ç¡®ä¿è¾“å‡ºåˆ°æ—¥å¿—ï¼‰
	txID := s.hashManager.SHA256(txBytes)
	var txIDPrefix, hashPrefix string
	if len(txID) >= 8 {
		txIDPrefix = fmt.Sprintf("%x", txID[:8])
	} else {
		txIDPrefix = fmt.Sprintf("%x", txID)
	}
	if len(hash) >= 8 {
		hashPrefix = fmt.Sprintf("%x", hash[:8])
	} else {
		hashPrefix = fmt.Sprintf("%x", hash)
	}
	// è°ƒè¯•æ—¥å¿—ï¼šä»…åœ¨ Debug çº§åˆ«è¾“å‡ºï¼Œé¿å…ç”Ÿäº§ç¯å¢ƒäº§ç”Ÿè¿‡å¤šæ—¥å¿—
	if s.logger != nil {
		s.logger.Debugf("ğŸ” [TxHashService.ComputeSignatureHash] txID=%s inputIndex=%d sighashType=%v sigHash=%s",
			txIDPrefix, req.InputIndex, req.SighashType, hashPrefix)
	}

	response := &transaction.ComputeSignatureHashResponse{
		Hash:    hash,
		IsValid: true,
	}

	return response, nil
}

// ValidateSignatureHash éªŒè¯ç­¾åå“ˆå¸Œï¼ˆç”¨äºç­¾åéªŒè¯ï¼‰
func (s *TransactionHashService) ValidateSignatureHash(ctx context.Context, req *transaction.ValidateSignatureHashRequest) (*transaction.ValidateSignatureHashResponse, error) {
	if req == nil {
		return &transaction.ValidateSignatureHashResponse{
			IsValid: false,
		}, fmt.Errorf("éªŒè¯è¯·æ±‚ä¸èƒ½ä¸ºç©º")
	}

	// è®¡ç®—å®é™…ç­¾åå“ˆå¸Œ
	computeReq := &transaction.ComputeSignatureHashRequest{
		Transaction:      req.Transaction,
		InputIndex:       req.InputIndex,
		SighashType:      req.SighashType,
		IncludeDebugInfo: false, // éªŒè¯æ—¶ä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
	}

	computeResp, err := s.ComputeSignatureHash(ctx, computeReq)
	if err != nil {
		return &transaction.ValidateSignatureHashResponse{
			IsValid: false,
		}, fmt.Errorf("è®¡ç®—ç­¾åå“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ¯”è¾ƒå“ˆå¸Œå€¼
	isValid := len(computeResp.Hash) == len(req.ExpectedHash) &&
		subtle.ConstantTimeCompare(computeResp.Hash, req.ExpectedHash) == 1

	response := &transaction.ValidateSignatureHashResponse{
		IsValid:      isValid,
		ComputedHash: computeResp.Hash,
		ExpectedHash: req.ExpectedHash,
	}

	if !isValid {
		errorMsg := "ç­¾åå“ˆå¸ŒéªŒè¯å¤±è´¥ï¼šè®¡ç®—çš„å“ˆå¸Œä¸æœŸæœ›å€¼ä¸åŒ¹é…"
		response.ErrorMessage = &errorMsg
	}

	return response, nil
}
