package fee

import (
	"encoding/hex"
	"fmt"
	"math/big"
	"sort"
	"strings"

	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	txiface "github.com/weisyn/v1/pkg/interfaces/tx"
	"github.com/weisyn/v1/pkg/utils/timeutil"
)

// CoinbaseBuilder Coinbaseäº¤æ˜“æ„å»ºå™¨ï¼ˆé›¶å¢å‘ï¼‰
//
// ğŸ¯ **é›¶å¢å‘æ ¸å¿ƒç»„ä»¶**
//
// æ„å»ºè§„åˆ™:
//   - æ— è¾“å…¥
//   - è¾“å‡º = æ‰‹ç»­è´¹èšåˆï¼ˆæŒ‰Tokenåˆ†ç»„ï¼‰
//   - æ‰€æœ‰è¾“å‡ºOwner = minerAddr
//   - æ— BlockRewardï¼ˆé›¶å¢å‘ï¼‰
//
// Tokenè¾“å‡ºé¡ºåº:
//  1. åŸç”Ÿå¸ï¼ˆnativeï¼‰ä¼˜å…ˆ
//  2. å…¶ä»–TokenæŒ‰TokenKeyå­—å…¸åºæ’åˆ—ï¼ˆç¡®å®šæ€§ï¼‰
type CoinbaseBuilder struct{}

// NewCoinbaseBuilder åˆ›å»ºCoinbaseæ„å»ºå™¨
func NewCoinbaseBuilder() *CoinbaseBuilder {
	return &CoinbaseBuilder{}
}

// Build æ„å»ºé›¶å¢å‘Coinbaseäº¤æ˜“
//
// å‚æ•°:
//
//	aggregatedFees: èšåˆçš„æ‰‹ç»­è´¹ï¼ˆæŒ‰Tokenåˆ†ç»„ï¼‰
//	minerAddr: çŸ¿å·¥åœ°å€ï¼ˆ20å­—èŠ‚ï¼‰
//	chainID: é“¾ID
//
// è¿”å›:
//
//	*Transaction: Coinbaseäº¤æ˜“
//	error: æ„å»ºé”™è¯¯
func (b *CoinbaseBuilder) Build(
	aggregatedFees *txiface.AggregatedFees,
	minerAddr []byte,
	chainID []byte,
) (*transaction_pb.Transaction, error) {
	if aggregatedFees == nil {
		return nil, fmt.Errorf("aggregatedFeesä¸èƒ½ä¸ºnil")
	}
	if len(minerAddr) != 20 {
		return nil, fmt.Errorf("çŸ¿å·¥åœ°å€é•¿åº¦å¿…é¡»ä¸º20å­—èŠ‚")
	}
	if len(chainID) == 0 {
		return nil, fmt.Errorf("chainIDä¸èƒ½ä¸ºç©º")
	}

	// åˆ›å»ºåŸºç¡€Coinbaseäº¤æ˜“
	coinbase := &transaction_pb.Transaction{
		Version:           1,
		Inputs:            []*transaction_pb.TxInput{}, // Coinbaseæ— è¾“å…¥
		Outputs:           []*transaction_pb.TxOutput{},
		Nonce:             0,
		CreationTimestamp: uint64(timeutil.NowUnix()),
		ChainId:           chainID,
	}

	// 1. åŸç”Ÿå¸ä¼˜å…ˆï¼ˆå§‹ç»ˆåˆ›å»ºåŸç”Ÿå¸è¾“å‡ºï¼Œå³ä½¿é‡‘é¢ä¸º0ï¼‰
	// âœ… è®¾è®¡ç†ç”±ï¼š
	//    - Coinbaseç¬¬ä¸€ä¸ªè¾“å‡ºçš„Owneræ ‡è¯†äº†çŸ¿å·¥åœ°å€
	//    - å³ä½¿æ²¡æœ‰æ‰‹ç»­è´¹æ”¶å…¥ï¼Œä¹Ÿéœ€è¦è®°å½•æ˜¯è°æŒ–å‡ºäº†è¿™ä¸ªåŒºå—
	//    - é›¶å¢å‘æ¨¡å¼ä¸‹ï¼Œé‡‘é¢ä¸º0æ˜¯åˆæ³•çš„
	nativeKey := txiface.TokenKey("native")
	nativeAmount := big.NewInt(0) // é»˜è®¤ä¸º0
	if amount, ok := aggregatedFees.ByToken[nativeKey]; ok {
		nativeAmount = amount
	}

	// ğŸ”§ ä¿®å¤ï¼šç§»é™¤ç¡¬ç¼–ç åŒºå—å¥–åŠ±ï¼Œç¡®ä¿é›¶å¢å‘åŸåˆ™
	// WESç³»ç»Ÿé‡‡ç”¨é›¶å¢å‘è®¾è®¡ï¼ŒCoinbaseåªåŒ…å«æ‰‹ç»­è´¹ï¼Œä¸åŒ…å«åŒºå—å¥–åŠ±
	// å¦‚æœéœ€è¦æµ‹è¯•ç¯å¢ƒæ”¯æŒåŒºå—å¥–åŠ±ï¼Œåº”é€šè¿‡é…ç½®ç³»ç»Ÿç®¡ç†ï¼ˆç›®å‰ä¸æ”¯æŒï¼‰
	// æ³¨æ„ï¼šnativeAmount åªåŒ…å«æ‰‹ç»­è´¹ï¼Œç¬¦åˆé›¶å¢å‘åŸåˆ™

	// åˆ›å»ºåŸç”Ÿå¸è¾“å‡ºï¼ˆå…è®¸é‡‘é¢ä¸º0ï¼‰
	output, err := b.createFeeOutput(nativeKey, nativeAmount, minerAddr)
	if err != nil {
		return nil, fmt.Errorf("åˆ›å»ºåŸç”Ÿå¸è¾“å‡ºå¤±è´¥: %w", err)
	}
	coinbase.Outputs = append(coinbase.Outputs, output)

	// 2. å…¶ä»–TokenæŒ‰å­—å…¸åºæ’åˆ—ï¼ˆä»…åˆ›å»ºé‡‘é¢>0çš„è¾“å‡ºï¼‰
	sortedKeys := b.sortTokenKeys(aggregatedFees.ByToken)
	for _, tokenKey := range sortedKeys {
		// è·³è¿‡åŸç”Ÿå¸ï¼ˆå·²å¤„ç†ï¼‰
		if tokenKey == nativeKey {
			continue
		}

		amount := aggregatedFees.ByToken[tokenKey]
		if amount.Sign() > 0 {
			output, err := b.createFeeOutput(tokenKey, amount, minerAddr)
			if err != nil {
				return nil, fmt.Errorf("åˆ›å»ºTokenè¾“å‡ºå¤±è´¥ [%s]: %w", tokenKey, err)
			}
			coinbase.Outputs = append(coinbase.Outputs, output)
		}
	}

	return coinbase, nil
}

// sortTokenKeys å¯¹TokenKeyè¿›è¡Œå­—å…¸åºæ’åºï¼ˆç¡®å®šæ€§ï¼‰
func (b *CoinbaseBuilder) sortTokenKeys(tokenMap map[txiface.TokenKey]*big.Int) []txiface.TokenKey {
	keys := make([]txiface.TokenKey, 0, len(tokenMap))
	for k := range tokenMap {
		keys = append(keys, k)
	}
	sort.Slice(keys, func(i, j int) bool {
		return string(keys[i]) < string(keys[j])
	})
	return keys
}

// createFeeOutput åˆ›å»ºå•ä¸ªTokençš„è´¹ç”¨è¾“å‡º
//
// å‚æ•°:
//
//	tokenKey: Tokenå”¯ä¸€æ ‡è¯†
//	amount: Tokené‡‘é¢
//	minerAddr: çŸ¿å·¥åœ°å€
//
// è¿”å›:
//
//	*TxOutput: è´¹ç”¨è¾“å‡º
//	error: æ„å»ºé”™è¯¯
func (b *CoinbaseBuilder) createFeeOutput(
	tokenKey txiface.TokenKey,
	amount *big.Int,
	minerAddr []byte,
) (*transaction_pb.TxOutput, error) {
	output := &transaction_pb.TxOutput{
		Owner: minerAddr,
		LockingConditions: []*transaction_pb.LockingCondition{
			{
				Condition: &transaction_pb.LockingCondition_SingleKeyLock{
					SingleKeyLock: &transaction_pb.SingleKeyLock{
						KeyRequirement: &transaction_pb.SingleKeyLock_RequiredAddressHash{
							RequiredAddressHash: minerAddr,
						},
						RequiredAlgorithm: transaction_pb.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
						SighashType:       transaction_pb.SignatureHashType_SIGHASH_ALL,
					},
				},
			},
		},
	}

	// æ ¹æ®TokenKeyç±»å‹åˆ›å»ºèµ„äº§è¾“å‡º
	if tokenKey == "native" {
		// åŸç”Ÿå¸
		output.OutputContent = &transaction_pb.TxOutput_Asset{
			Asset: &transaction_pb.AssetOutput{
				AssetContent: &transaction_pb.AssetOutput_NativeCoin{
					NativeCoin: &transaction_pb.NativeCoinAsset{
						Amount: amount.String(),
					},
				},
			},
		}
	} else if strings.HasPrefix(string(tokenKey), "contract:") {
		// åˆçº¦Token: contract:{addr}:{type}:{id}
		// æ”¯æŒæ ¼å¼:
		//   contract:{addr}:{classId}              -> åŒè´¨åŒ–Token
		//   contract:{addr}:nft:{uniqueId}         -> NFT
		//   contract:{addr}:sft:{batchId}:{instId} -> åŠåŒè´¨åŒ–Token
		assetOutput, err := b.parseContractToken(string(tokenKey), amount)
		if err != nil {
			return nil, fmt.Errorf("è§£æåˆçº¦Tokenå¤±è´¥: %w", err)
		}
		output.OutputContent = &transaction_pb.TxOutput_Asset{
			Asset: assetOutput,
		}
	} else {
		return nil, fmt.Errorf("æœªçŸ¥çš„TokenKeyæ ¼å¼: %s", tokenKey)
	}

	return output, nil
}

// parseContractToken è§£æåˆçº¦Tokenå­—ç¬¦ä¸²å¹¶æ„å»ºAssetOutput
//
// TokenKeyæ ¼å¼:
//   - contract:{addr}:{classId}              -> FT
//   - contract:{addr}:nft:{uniqueId}         -> NFT
//   - contract:{addr}:sft:{batchId}:{instId} -> SFT
func (b *CoinbaseBuilder) parseContractToken(tokenKeyStr string, amount *big.Int) (*transaction_pb.AssetOutput, error) {
	parts := strings.Split(tokenKeyStr, ":")
	if len(parts) < 3 || parts[0] != "contract" {
		return nil, fmt.Errorf("æ— æ•ˆçš„åˆçº¦Tokenæ ¼å¼: %s", tokenKeyStr)
	}

	// è§£æåˆçº¦åœ°å€ï¼ˆåå…­è¿›åˆ¶ï¼‰
	contractAddr, err := hex.DecodeString(parts[1])
	if err != nil {
		return nil, fmt.Errorf("è§£æåˆçº¦åœ°å€å¤±è´¥: %w", err)
	}

	// æ ¹æ®ç±»å‹è§£æTokenæ ‡è¯†ç¬¦
	if len(parts) == 3 {
		// contract:{addr}:{classId} -> åŒè´¨åŒ–Token (FT)
		classId, err := hex.DecodeString(parts[2])
		if err != nil {
			return nil, fmt.Errorf("è§£æFungibleClassIdå¤±è´¥: %w", err)
		}
		return &transaction_pb.AssetOutput{
			AssetContent: &transaction_pb.AssetOutput_ContractToken{
				ContractToken: &transaction_pb.ContractTokenAsset{
					ContractAddress: contractAddr,
					TokenIdentifier: &transaction_pb.ContractTokenAsset_FungibleClassId{
						FungibleClassId: classId,
					},
					Amount: amount.String(),
				},
			},
		}, nil
	} else if len(parts) == 4 && parts[2] == "nft" {
		// contract:{addr}:nft:{uniqueId} -> NFT
		uniqueId, err := hex.DecodeString(parts[3])
		if err != nil {
			return nil, fmt.Errorf("è§£æNftUniqueIdå¤±è´¥: %w", err)
		}
		return &transaction_pb.AssetOutput{
			AssetContent: &transaction_pb.AssetOutput_ContractToken{
				ContractToken: &transaction_pb.ContractTokenAsset{
					ContractAddress: contractAddr,
					TokenIdentifier: &transaction_pb.ContractTokenAsset_NftUniqueId{
						NftUniqueId: uniqueId,
					},
					Amount: amount.String(),
				},
			},
		}, nil
	} else if len(parts) == 5 && parts[2] == "sft" {
		// contract:{addr}:sft:{batchId}:{instanceId} -> åŠåŒè´¨åŒ–Token
		batchId, err := hex.DecodeString(parts[3])
		if err != nil {
			return nil, fmt.Errorf("è§£æSFT BatchIdå¤±è´¥: %w", err)
		}
		// InstanceIdæ˜¯uint64ï¼Œéœ€è¦ä»åå…­è¿›åˆ¶å­—ç¬¦ä¸²è§£æ
		var instanceId uint64
		_, err = fmt.Sscanf(parts[4], "%x", &instanceId)
		if err != nil {
			return nil, fmt.Errorf("è§£æSFT InstanceIdå¤±è´¥: %w", err)
		}
		return &transaction_pb.AssetOutput{
			AssetContent: &transaction_pb.AssetOutput_ContractToken{
				ContractToken: &transaction_pb.ContractTokenAsset{
					ContractAddress: contractAddr,
					TokenIdentifier: &transaction_pb.ContractTokenAsset_SemiFungibleId{
						SemiFungibleId: &transaction_pb.SemiFungibleId{
							BatchId:    batchId,
							InstanceId: instanceId,
						},
					},
					Amount: amount.String(),
				},
			},
		}, nil
	}

	return nil, fmt.Errorf("ä¸æ”¯æŒçš„åˆçº¦Tokenæ ¼å¼: %s", tokenKeyStr)
}
