// Package hash æä¾› HashCanonicalizer ç«¯å£çš„å®ç°
//
// canonicalizer.go: è§„èŒƒåŒ–äº¤æ˜“å“ˆå¸Œè®¡ç®—å®ç°
package hash

import (
	"context"
	"fmt"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// Canonicalizer è§„èŒƒåŒ–å“ˆå¸Œè®¡ç®—å™¨
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šå®ç°è§„èŒƒåŒ–äº¤æ˜“å“ˆå¸Œè®¡ç®—ï¼Œæ’é™¤ç­¾åå­—æ®µ
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// äº¤æ˜“å“ˆå¸Œå¿…é¡»æ’é™¤ç­¾åå­—æ®µï¼Œå¦åˆ™ä¼šå¯¼è‡´ç­¾åéªŒè¯å¤±è´¥ï¼ˆå¾ªç¯ä¾èµ–ï¼‰ã€‚
// æœ¬å®ç°é€šè¿‡ gRPC TransactionHashService è¿›è¡Œå“ˆå¸Œè®¡ç®—ï¼Œç¡®ä¿ä¸€è‡´æ€§ã€‚
//
// âš ï¸ **å…³é”®å®ç°**ï¼š
// - é€šè¿‡ gRPC æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œå’Œç­¾åå“ˆå¸Œ
// - ç¡®ä¿æ‰€æœ‰å“ˆå¸Œè®¡ç®—ç»Ÿä¸€é€šè¿‡ TransactionHashService
// - æ”¯æŒ SIGHASH ç±»å‹å¤„ç†
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - Signer å®ç°
// - ProofProvider å®ç°
// - AuthZ éªŒè¯æ’ä»¶
type Canonicalizer struct {
	txHashClient transaction.TransactionHashServiceClient
}

// NewCanonicalizer åˆ›å»ºæ–°çš„è§„èŒƒåŒ–å“ˆå¸Œè®¡ç®—å™¨
//
// å‚æ•°ï¼š
//   - txHashClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºé€šè¿‡ gRPC è®¡ç®—å“ˆå¸Œï¼‰
//
// è¿”å›ï¼š
//   - *Canonicalizer: æ–°åˆ›å»ºçš„å®ä¾‹
func NewCanonicalizer(txHashClient transaction.TransactionHashServiceClient) *Canonicalizer {
	return &Canonicalizer{
		txHashClient: txHashClient,
	}
}

// ComputeTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆç”¨äºäº¤æ˜“IDï¼‰
//
// å®ç° tx.HashCanonicalizer æ¥å£
//
// ğŸ¯ **è§„èŒƒåŒ–è§„åˆ™**ï¼š
// é€šè¿‡ gRPC TransactionHashService.ComputeHash è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼Œç¡®ä¿ä¸€è‡´æ€§ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å¾…è®¡ç®—å“ˆå¸Œçš„äº¤æ˜“
//
// è¿”å›ï¼š
//   - []byte: äº¤æ˜“å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//   - error: è®¡ç®—å¤±è´¥
func (c *Canonicalizer) ComputeTransactionHash(
	ctx context.Context,
	tx *transaction.Transaction,
) ([]byte, error) {
	// 1. å‚æ•°æ ¡éªŒ
	if tx == nil {
		return nil, ErrInvalidTransaction
	}

	if c.txHashClient == nil {
		return nil, fmt.Errorf("transaction hash client is not initialized")
	}

	// 2. ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	req := &transaction.ComputeHashRequest{
		Transaction:     tx,
		IncludeDebugInfo: false,
	}
	resp, err := c.txHashClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("%w: %v", ErrCanonicalSerializationFailed, err)
	}

	if !resp.IsValid {
		return nil, ErrInvalidTransaction
	}

	return resp.Hash, nil
}

// ComputeSignatureHash è®¡ç®—ç­¾åå“ˆå¸Œï¼ˆç”¨äºç­¾åå’ŒéªŒè¯ï¼‰
//
// å®ç° tx.HashCanonicalizer æ¥å£
//
// ğŸ¯ **SIGHASH ç±»å‹å¤„ç†**ï¼š
// é€šè¿‡ gRPC TransactionHashService.ComputeSignatureHash è®¡ç®—ç­¾åå“ˆå¸Œï¼Œæ”¯æŒæ‰€æœ‰ SIGHASH ç±»å‹ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å¾…è®¡ç®—å“ˆå¸Œçš„äº¤æ˜“
//   - inputIndex: å½“å‰è¾“å…¥ç´¢å¼•
//   - sighashType: ç­¾åå“ˆå¸Œç±»å‹
//
// è¿”å›ï¼š
//   - []byte: ç­¾åå“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//   - error: è®¡ç®—å¤±è´¥
func (c *Canonicalizer) ComputeSignatureHash(
	ctx context.Context,
	tx *transaction.Transaction,
	inputIndex int,
	sighashType transaction.SignatureHashType,
) ([]byte, error) {
	// 1. å‚æ•°æ ¡éªŒ
	if tx == nil {
		return nil, ErrInvalidTransaction
	}
	if inputIndex < 0 || inputIndex >= len(tx.Inputs) {
		return nil, ErrInputIndexOutOfRange
	}

	if c.txHashClient == nil {
		return nil, fmt.Errorf("transaction hash client is not initialized")
	}

	// 2. ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—ç­¾åå“ˆå¸Œ
	req := &transaction.ComputeSignatureHashRequest{
		Transaction:     tx,
		InputIndex:      uint32(inputIndex),
		SighashType:     sighashType,
		IncludeDebugInfo: false,
	}
	resp, err := c.txHashClient.ComputeSignatureHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("%w: %v", ErrCanonicalSerializationFailed, err)
	}

	if !resp.IsValid {
		return nil, ErrInvalidTransaction
	}

	return resp.Hash, nil
}

// ComputeSignatureHashForVerification è®¡ç®—ç­¾åå“ˆå¸Œï¼ˆç”¨äºéªŒè¯ï¼‰
//
// å®ç° tx.HashCanonicalizer æ¥å£
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// éªŒè¯æ—¶çš„å“ˆå¸Œè®¡ç®—é€»è¾‘ä¸ç­¾åæ—¶å®Œå…¨ç›¸åŒï¼Œåªæ˜¯è¯­ä¹‰ä¸Šæ›´æ˜ç¡®ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å¾…éªŒè¯çš„äº¤æ˜“ï¼ˆå·²åŒ…å«ç­¾åï¼‰
//   - inputIndex: å½“å‰è¾“å…¥ç´¢å¼•
//   - sighashType: ç­¾åå“ˆå¸Œç±»å‹
//
// è¿”å›ï¼š
//   - []byte: ç­¾åå“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//   - error: è®¡ç®—å¤±è´¥
func (c *Canonicalizer) ComputeSignatureHashForVerification(
	ctx context.Context,
	tx *transaction.Transaction,
	inputIndex int,
	sighashType transaction.SignatureHashType,
) ([]byte, error) {
	// éªŒè¯æ—¶çš„å“ˆå¸Œè®¡ç®—é€»è¾‘ä¸ç­¾åæ—¶å®Œå…¨ç›¸åŒ
	return c.ComputeSignatureHash(ctx, tx, inputIndex, sighashType)
}

// ================================================================================================
// ğŸ¯ é”™è¯¯å®šä¹‰ï¼ˆTX å†…éƒ¨é”™è¯¯,ä¸æš´éœ²ä¸ºå…¬å…±æ¥å£ï¼‰
// ================================================================================================

var (
	// ErrInvalidTransaction äº¤æ˜“ç»“æ„æ— æ•ˆ
	ErrInvalidTransaction = fmt.Errorf("invalid transaction structure")

	// ErrCanonicalSerializationFailed è§„èŒƒåŒ–åºåˆ—åŒ–å¤±è´¥
	ErrCanonicalSerializationFailed = fmt.Errorf("canonical serialization failed")

	// ErrInputIndexOutOfRange è¾“å…¥ç´¢å¼•è¶…å‡ºèŒƒå›´
	ErrInputIndexOutOfRange = fmt.Errorf("input index out of range")
)
